# vtwi

./: .env.sample  Makefile  README.md  pyproject.toml
src/config/: settings.py  urls.py
src/vtwi/: admin.py  api.py  apps.py  forms.py  models.py  urls.py  views.py
src/vtwi/migrations/: 0001_initial.py  0002_vtwiuser_channel_id.py
src/vtwi/static/vtwi/: style.css
src/vtwi/templates/vtwi/: _base.html  home.html  index.html
