[tool.poetry]
name = "vtwi"
version = "0.1.0"
description = ""
authors = ["新篠ゆう <37145593+yuarasino@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
django-environ = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
